@@ -1,6 +1,7 @@
 v1.0.2:
     - Added .appolloignore support to specify files and directories to ignore when sending files to build
     - Added support for mode, target and flavor options during flutter build
+    - Added local flutter version check when starting build with warning if it is different from the one of the build
     - Default deployment target is set to 11 if none is provided during build and it's set to 9 in xcode configuration
     - Fixes
 
